# refactor_r

./: .gitignore  01_Generate_Ticker_Metadata.R  02_Download_Clean_TickerData.R  02a_DataCleaning_Helpers.R  03_FeatureEngineering.R  03a_FeatureEngineering_Helpers.R  04_Train_Quantile_Models.R  04a_MetaModel_Module.R  05_RankingValidation_Helpers.R  06_Generate_RankedForecast.R  07_Ticker_Correlation_Analysis.R  08_Ticker_Analysis_Dashboard.R  09_Generate_Portfolio.R  README.md  config.R  config.py  discovery_main.py  main.R  main.py  market_data_store.py  pyproject.toml  step_01_generate_ticker_metadata.py  step_02_download_clean_ticker_data.py  step_02a_data_cleaning_helpers.py  step_03_feature_engineering.py  step_03a_feature_helpers.py  step_04_train_quantile_models.py  step_05_ranking_validation_helpers.py  step_06_generate_ranked_forecast.py  step_07_ticker_correlation_analysis.py  step_08_ticker_analysis_dashboard.py  step_09_generate_portfolio.py
config/: discovery.toml
data/: tickers_metadata.parquet
features/: forecast_ranks_all.pkl  model_base.pt  model_meta.pt  training_log_base.parquet  training_log_meta.parquet
forecasts/: portfolio_expected_rank_full.csv  portfolio_walk_forward_backtest.csv  portfolio_walk_forward_backtest_summary.json  portfolio_walk_forward_catboost_backtest.csv  portfolio_walk_forward_catboost_summary.json  portfolio_walk_forward_tabicl_backtest.csv  portfolio_walk_forward_tabicl_summary.json  ranked_forecast_2023-06-16 00:00:00 - 2026-02-12 00:00:00.csv  ranked_forecast_2023-07-19 00:00:00 - 2026-03-24 00:00:00.csv  (+1 more)
(+49 files in other folders)
