[project]
name = "refactor-r-python-only"
version = "0.1.0"
description = "Python-only stock ranking pipeline"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=2.4.3",
  "pandas>=2.3.3",
  "pyarrow>=23.0.1",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.1",
  "seaborn>=0.13.2",
  "streamlit>=1.55.0",
  "ta>=0.11.0",
  "torch>=2.11.0",
  "yfinance>=1.2.0",
]

[tool.uv]
package = false
